Updated pipelines to use maven build task

--- a/.jfrog-pipelines/values.yml
+++ b/.jfrog-pipelines/values.yml
@@ -1,4 +1,4 @@
-gitProvider: myGithub
-artifactory: myArtifactory
+gitProvider: gh_int_bhanu
+artifactory: int_default_artifactory
 repoPath: jfrog/jfrog-pipelines-maven-sample
 deployerRepo: quickstarts-maven-local
