--- a/.jfrog-pipelines/pipelines.yml
+++ b/.jfrog-pipelines/pipelines.yml
@@ -22,7 +22,7 @@ pipelines:
   - name: Maven_Quickstart
     steps:
       - name: mvn_build_step
-        type: MvnBuild
+        type: Bash
         configuration:
           deployerSnapshotRepo: {{ .Values.deployerRepo }}
           deployerReleaseRepo: {{ .Values.deployerRepo }}
@@ -31,6 +31,15 @@ pipelines:
             - name: cron_trigger_mvn
           integrations:
             - name: {{ .Values.artifactory }}
+        execution:
+          onExecute:
+          - task: jfrog/maven-build@v0.0.1
+            id: maven-build-task
+            input:
+              deployerSnapshotRepo: {{ .Values.deployerRepo }}
+              deployerReleaseRepo: {{ .Values.deployerRepo }}
+              resourceName: mvn_repo
+              sourceLocation: ""
 
       - name: publish_build
         type: PublishBuildInfo
