Added test commands

--- a/.jfrog-pipelines/pipelines.yml
+++ b/.jfrog-pipelines/pipelines.yml
@@ -31,6 +31,8 @@ pipelines:
             - name: {{ .Values.artifactory }}
         execution:
           onStart:
+          - which jf
+          - which jfrog
           - task: jfrog/setup-jfrog-cli@v0.1.0
             repository: pipelines-tasks-virtual
             input:
