--- a/.jfrog-pipelines/pipelines.yml
+++ b/.jfrog-pipelines/pipelines.yml
@@ -42,7 +42,7 @@ pipelines:
           onStart:
           - which jfrog
           onExecute:
-          - task: jfrog/maven-build@v0.0.1
+          - task: $res_mvn_build_task_gitrepo_resourcePath
             id: maven-build-task
             input:
               deployerSnapshotRepo: {{ .Values.deployerRepo }}
