--- a/.jfrog-pipelines/values.yml
+++ b/.jfrog-pipelines/values.yml
@@ -2,3 +2,4 @@ gitProvider: gh_int_bhanu
 artifactory: int_default_artifactory
 repoPath: bhanurp/maven-build
 deployerRepo: quickstarts-maven-local
+mainBranch: main
