--- a/.jfrog-pipelines/pipelines.yml
+++ b/.jfrog-pipelines/pipelines.yml
@@ -29,6 +29,12 @@ resources:
 
 pipelines:
   - name: Maven_Quickstart
+    configuration:
+      jfrogCliVersion: 2
+      environmentVariables:
+            readOnly:
+              JFROG_TASK_DEBUG: "true"
+              JFROG_CLI_LOG_LEVEL: DEBUG
     steps:
       - name: mvn_build_step
         type: Bash
@@ -39,10 +45,6 @@ pipelines:
             - name: mvn_build_task_gitrepo
           integrations:
             - name: {{ .Values.artifactory }}
-          environmentVariables:
-            readOnly:
-              JFROG_TASK_DEBUG: "true"
-              JFROG_CLI_LOG_LEVEL: DEBUG
         execution:
           onStart:
           - which jfrog
