--- a/.jfrog-pipelines/pipelines.yml
+++ b/.jfrog-pipelines/pipelines.yml
@@ -53,7 +53,12 @@ pipelines:
           - task: $res_mvn_build_task_gitrepo_resourcePath
             id: maven-build-task
             input:
+              deployerSnapshotRepo: {{ .Values.deployerRepo }}
+              deployerReleaseRepo: {{ .Values.deployerRepo }}
+              resolverSnapshotRepo: quickstart-maven-remote
+              resolverReleaseRepo: quickstart-maven-remote`
               resourceName: mvn_repo
+              sourceLocation: ""
 
       - name: publish_build
         type: PublishBuildInfo
