Fixed gramatical error

--- a/.jfrog-pipelines/pipelines.yml
+++ b/.jfrog-pipelines/pipelines.yml
@@ -56,7 +56,7 @@ pipelines:
               deployerSnapshotRepo: {{ .Values.deployerRepo }}
               deployerReleaseRepo: {{ .Values.deployerRepo }}
               resolverSnapshotRepo: quickstart-maven-remote
-              resolverReleaseRepo: quickstart-maven-remote`
+              resolverReleaseRepo: quickstart-maven-remote
               resourceName: mvn_repo
               sourceLocation: ""
 
