--- a/.jfrog-pipelines/pipelines.yml
+++ b/.jfrog-pipelines/pipelines.yml
@@ -30,6 +30,14 @@ resources:
 pipelines:
   - name: Maven_Quickstart
     configuration:
+      runtime:
+      type: image
+      image:
+        custom:
+          name: docker.jfrog.io/jfrog/pipelines-u20java
+          tag: 17
+          registry: docker_registry
+          autoPull: tru
       jfrogCliVersion: 2
       environmentVariables:
         readOnly:
