Added auto build publish

--- a/.jfrog-pipelines/pipelines.yml
+++ b/.jfrog-pipelines/pipelines.yml
@@ -65,6 +65,7 @@ pipelines:
               deployerReleaseRepo: {{ .Values.deployerRepo }}
               resourceName: mvn_repo
               sourceLocation: ""
+              autoPublishBuildInfo: true
 
       - name: publish_build
         type: PublishBuildInfo
