Added auto build publish

--- a/.jfrog-pipelines/pipelines.yml
+++ b/.jfrog-pipelines/pipelines.yml
@@ -63,5 +63,6 @@ pipelines:
               deployerSnapshotRepo: {{ .Values.deployerRepo }}
               deployerReleaseRepo: {{ .Values.deployerRepo }}
               resourceName: mvn_repo
+              mvnCommand: "clean install deploy"
               sourceLocation: ""
               autoPublishBuildInfo: true
