--- a/.jfrog-pipelines/pipelines.yml
+++ b/.jfrog-pipelines/pipelines.yml
@@ -69,6 +69,9 @@ pipelines:
           onStart:
           - which jfrog
           - jfrog c show
+          - task: jfrog/setup-node@v0.1.0  
+            input:
+              version: "18.0.0"
           - task: jfrog/setup-jfrog-cli@v0.0.2
             input:
               version: "2.38.2"
