Updated task version

--- a/.jfrog-pipelines/pipelines.yml
+++ b/.jfrog-pipelines/pipelines.yml
@@ -89,4 +89,4 @@ pipelines:
               sourceLocation: ""
               autoPublishBuildInfo: true
               xrayScan: true
-              failOnScan: false
+              failOnScan: 
